# mongodb-hack

./: .gitignore  README.mcp-agent.md  README.md  api_server.py  app.py  demo.html  demo_tavily.py  main.py  mcp_agent.config.yaml  pyproject.toml  test_sources.py  text.txt
browser_extension/: content.js  manifest.json  styles.css
db/: cache.py  init_indexes.py
reddit-extension/: content.js  manifest.json
src/: __init__.py  app.py  main.py
src/db/: __init__.py  cache.py  init_indexes.py  mongodb.py
src/mongodb_hack/: __init__.py  app.py
src/mongodb_hack/db/: cache.py
