[project]
name = "mongodb-hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tavily-python>=0.3.0",
    "mcp-tavily>=0.1.10",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "openai>=2.8.1",
    "pymongo>=4.6.0",
    "motor>=3.3.0",
]

[project.scripts]
app = "app:main"

[tool.uv]
package = true

[build-system]
requires = ["uv-build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
